# Iot_proxy

./: .gitignore  README.md  Usage.md
business_service/: .gitignore  README.md  go.mod  go.sum  main.go
emqx/: README.md  mqtt_to_kafka_rule.sql  (+1 more)
iota_proxy/: CMakeLists.txt
iota_proxy/config/: edge_pipeline.json
iota_proxy/include/iota_proxy/: ProxyRuntime.hpp
iota_proxy/include/iota_proxy/admission/: AdmissionControl.hpp
iota_proxy/include/iota_proxy/business/: BusinessLayer.hpp  EdgeDataMessage.hpp  EdgeDataPipeline.hpp  KafkaBroadcastSource.hpp  KafkaSink.hpp  NodeIdentity.hpp  RedisStateCache.hpp
iota_proxy/include/iota_proxy/common/: ByteView.hpp  Endpoint.hpp
iota_proxy/include/iota_proxy/discovery/: DiscoveryService.hpp  RouteManager.hpp
iota_proxy/include/iota_proxy/frame/: EdgeDataFrame.hpp  TunnelFrame.hpp
iota_proxy/include/iota_proxy/kcp/: KcpTunnel.hpp
iota_proxy/include/iota_proxy/network/: TcpEgress.hpp  TcpEvent.hpp  TcpIngress.hpp
iota_proxy/src/: ProxyRuntime.cpp
iota_proxy/src/admission/: AdmissionControl.cpp
iota_proxy/src/app/: main.cpp
iota_proxy/src/business/: EdgeDataMessage.cpp  EdgeDataPipeline.cpp  KafkaBroadcastSource.cpp  KafkaSink.cpp  NodeIdentity.cpp  PassThroughBusiness.cpp  RedisStateCache.cpp
iota_proxy/src/common/: Endpoint.cpp
iota_proxy/src/discovery/: DiscoveryService.cpp  RouteManager.cpp
iota_proxy/src/frame/: EdgeDataFrame.cpp  TunnelFrame.cpp
iota_proxy/src/kcp/: KcpTunnel.cpp
iota_proxy/src/network/: TcpEgress.cpp  TcpIngress.cpp
myring/: CMakeLists.txt
myring/include/: TcpConnection.h  TcpServer.h  nocopyable.h
myring/include/Kcp/: KcpConv.hpp  KcpManager.hpp  KcpSession.hpp  UdpDispatcher.h
myring/include/NoMtxQueue/: BackOff.h  NoMtxQueue.hpp  NoMtxQueue.tpp
myring/include/Proactor/: LoopThreadPool.hpp  Proactor.hpp  ProactorThread.hpp  Request.hpp
myring/include/objectpool/: Buffer.hpp  ObjectPool.hpp  ObjectPoolOptions.hpp  ObjectPoolStats.hpp
myring/include/tcmalloc/: CentralCache.hpp  Common.hpp  FreeList.hpp  MiniMalloc.hpp  PageHeap.hpp  SizeClass.hpp  Span.hpp  ThreadCache.hpp  TransferCache.hpp
myring/src/: TcpConnection.cpp  TcpServer.cpp
myring/src/Kcp/: KcpManager.cpp  KcpSession.cpp  UdpDispatcher.cpp
myring/src/Proactor/: LoopThreadPool.cpp  Proactor.cpp  ProactorThread.cpp
myring/src/objectpool/: ObjectPool.cpp
myring/src/tcmalloc/: CentralCache.cpp  MiniMalloc.cpp  PageHeap.cpp  ThreadCache.cpp  TransferCache.cpp
(+47 files in other folders)
